모델로더 예제 추가

--- a/webgl/exam.model_loader/1.html
+++ b/webgl/exam.model_loader/1.html
@@ -92,7 +92,8 @@
             //var mixers = [];
             var loader = new THREE.FBXLoader( manager );
             //
-            loader.load( './fbx/test_FBX_Z.FBX',
+            //loader.load( './fbx/test_FBX_Z.FBX',
+            loader.load( './fbx/dwarf_walk.fbx',
                     function( object ) {
 
                         //var skinnedMesh = object.children[0];
