--- a/webgl/exam.model_loader/2.json.html
+++ b/webgl/exam.model_loader/2.json.html
@@ -92,7 +92,7 @@
 
                         //json 모델 로더 생성 , json로더는 엔진에 기본 내장되어있다
                         var loader = new THREE.JSONLoader(manager);
-                        loader.load( './fbx/target.json', function ( geometry, materials ) {
+                        loader.load( './three/bullet.json', function ( geometry, materials ) {
 
                             //console.log(geometry.faceVertexUvs[0]);
 
