json loader 예제 추가

--- a/webgl/exam.7.2d_effect/1.texture.basic.html
+++ b/webgl/exam.7.2d_effect/1.texture.basic.html
@@ -40,8 +40,7 @@
             var self = this;
 
             //그리드헬퍼
-            var helper =  new THREE.GridHelper( 3, 1 );
-            helper.setColors(0x00ff00,0xff0000);
+            var helper =  new THREE.GridHelper( 3, 1 ,0x00ff00,0xff0000);
             this.scene.add(helper);
 
             var textureLoader = new THREE.TextureLoader();
