--- a/webgl/tutorial/8.2.shadow.html
+++ b/webgl/tutorial/8.2.shadow.html
@@ -43,15 +43,20 @@
             //3디오브잭트용 리소스 생성
             var cube_geometry = new THREE.CubeGeometry(1,1,1);
             var cube_material = new THREE.MeshPhongMaterial(
-                    { ambient: 0x999999, color: 0x00ff00, specular: 0x101010
-                        //,wireframe : true
+                    {
+                        ambient: 0x999999, color: 0x00ff00, specular: 0x101010,
+                        transparent : true,
+                        opacity : 0.5 //반투명에도 그림자는 선명할까?
                     } );
 
             // Ground
             var plane = new THREE.Mesh(
                     new THREE.PlaneGeometry( 4, 4 ),
                     new THREE.MeshPhongMaterial(
-                            { ambient: 0x999999, color: 0xff0000, specular: 0x101010
+                            { ambient: 0x999999, color: 0xff0000, specular: 0x101010,
+                                //transparent : true,
+//                                wireframe:true,
+                                //opacity : 0.1
                                 //,wireframe : true
                             } ) );
             plane.rotation.x = THREE.Math.degToRad(-90);
@@ -76,7 +81,6 @@
             var directionalLight = new THREE.DirectionalLight( 0xffffff, 1.35 );
             directionalLight.position.set( 2, 2, 2 )
             this.scene.add( directionalLight );
-
             directionalLight.castShadow = true;
 
             //directionalLight.shadowCameraVisible = true;
