--- a/webgl/exam.tween/1.basic.html
+++ b/webgl/exam.tween/1.basic.html
@@ -13,7 +13,7 @@
     <script src="../libs/extra/Tween.js"></script>
     <script src="../libs/threejs/js/controls/OrbitControls.js"></script>
 
-    <script src="../libs/ramb3d/core.js"></script>
+    <script src="../libs/elvis5/core.js"></script>
 
 </head>
 <body style="margin: 0px;" >
@@ -49,7 +49,7 @@
 
             //var texture;
             (new THREE.TextureLoader()).load(
-                    '../res/RTS_Crate.png',
+                    '../res/UV_Grid_Sm.jpg',
                     function(texture) {
                         var node_test = new THREE.Mesh(
                                 new THREE.CubeGeometry(1,1,1),
